--- a/SaneScanner/fr.lproj/Localizable.strings
+++ b/SaneScanner/fr.lproj/Localizable.strings
@@ -22,6 +22,7 @@
 "ACTION OPEN"               = "Ouvrir";
 "ACTION ANALYTICS YES"      = "Autoriser les statistiques";
 "ACTION ANALYTICS NO"       = "Ne plus me demander";
+"ACTION EDIT"               = "Modifier";
 
 "LOADING"           = "Chargement...";
 "SCANNING"          = "Acquisition...";
@@ -95,21 +96,25 @@
 "GALLERY OVERVIEW SELECTED PLURAL %d"   = "%d documents sélectionnés";
 
 // Dialogs
-"DIALOG TITLE ADD HOST"             = "Ajouter";
-"DIALOG MESSAGE ADD HOST"           = "Entrez le nom d'hôte ou l'adresse IP du nouvel hôte";
+"DIALOG ADD HOST TITLE"             = "Ajouter un hôte";
+"DIALOG EDIT HOST TITLE"            = "Modifier l'hôte";
+"DIALOG PERSIST HOST TITLE"         = "Sauvegarde l'hôte";
+"DIALOG ADD HOST MESSAGE"           = "Entrez le nom ou l'adresse IP de l'hôte";
+"DIALOG ADD HOST PLACEHOLDER HOST"  = "Hôte";
+"DIALOG ADD HOST PLACEHOLDER NAME"  = "Nom";
 
-"DIALOG TITLE AUTH"                 = "Authentification requise";
-"DIALOG MESSAGE AUTH %@"            = "Veuillez entrer votre nom d'utilisateur et mot de passe pour %@";
+"DIALOG AUTH TITLE"                 = "Authentification requise";
+"DIALOG AUTH MESSAGE %@"            = "Veuillez entrer votre nom d'utilisateur et mot de passe pour %@";
 "DIALOG AUTH PLACEHOLDER USERNAME"  = "Utilisateur";
 "DIALOG AUTH PLACEHOLDER PASSWORD"  = "Mot de passe";
 
-"DIALOG TITLE DELETE SCAN"          = "Confirmation";
-"DIALOG MESSAGE DELETE SCAN"        = "Etes vous sûr de vouloir supprimer ce document ?";
+"DIALOG DELETE SCAN TITLE"          = "Confirmation";
+"DIALOG DELETE SCAN MESSAGE"        = "Etes vous sûr de vouloir supprimer ce document ?";
 
-"DIALOG TITLE DELETE SCANS"         = "Confirmation";
-"DIALOG MESSAGE DELETE SCANS %d"    = "Etes vous sûr de vouloir supprimer %d documents ?";
+"DIALOG DELETE SCANS TITLE"         = "Confirmation";
+"DIALOG DELETE SCANS MESSAGE %d"    = "Etes vous sûr de vouloir supprimer %d documents ?";
 
-"DIALOG TITLE COULDNT OPEN DEVICE"  = "Accès au périphérique échoué";
+"DIALOG COULDNT OPEN DEVICE TITLE"  = "Accès au périphérique échoué";
 
 "OPTION BOOL ON"    = "Activé";
 "OPTION BOOL OFF"   = "Désactivé";
