Add save and auto buttons to textfields in Catalyst when applicable

--- a/SaneScanner/en.lproj/Localizable.strings
+++ b/SaneScanner/en.lproj/Localizable.strings
@@ -23,6 +23,7 @@
 "ACTION ANALYTICS YES"      = "Allow analytics";
 "ACTION ANALYTICS NO"       = "Don't ask again";
 "ACTION EDIT"               = "Edit";
+"ACTION SAVE"               = "Save";
 
 "LOADING"           = "Loading...";
 "SCANNING"          = "Scanning...";
