--- a/SaneScanner/fr.lproj/Localizable.strings
+++ b/SaneScanner/fr.lproj/Localizable.strings
@@ -23,6 +23,7 @@
 "ACTION ANALYTICS YES"      = "Autoriser les statistiques";
 "ACTION ANALYTICS NO"       = "Ne plus me demander";
 "ACTION EDIT"               = "Modifier";
+"ACTION SAVE"               = "Sauvegarder";
 
 "LOADING"           = "Chargement...";
 "SCANNING"          = "Acquisition...";
