--- a/SaneScanner/en.lproj/Localizable.strings
+++ b/SaneScanner/en.lproj/Localizable.strings
@@ -70,6 +70,7 @@
 "PREFERENCES TITLE SANE VERSION"                    = "Sane backends version";
 "PREFERENCES TITLE CONTACT"                         = "Got some questions? Drop me an email!";
 "PREFERENCES TITLE ENABLE ANALYTICS"                = "App analytics";
+"PREFERENCES TITLE ACKNOWLEDGEMENTS"                = "Acknowledgements";
 
 "PREFERENCES MESSAGE PREVIEW DEFAULT COLOR MODE"    = "Will use the default color mode and image intensity, if those options are found and support using an automatic value. Allows for more consistent render accross previews, whatever the option you set, but can reduce preview speed and reset other options depending on the device. This can result in black images when scanning after a preview on some SANE backends (e.g. Pixma 1.0.24).";
 "PREFERENCES MESSAGE SHOW ADVANCED OPTIONS"         = "Some devices have advanced options, toggling this setting ON will allow you to access them.";
