--- a/SaneScanner/fr.lproj/Localizable.strings
+++ b/SaneScanner/fr.lproj/Localizable.strings
@@ -70,6 +70,7 @@
 "PREFERENCES TITLE SANE VERSION"                    = "Version de Sane backends";
 "PREFERENCES TITLE CONTACT"                         = "Des questions ? Envoyez moi un email !";
 "PREFERENCES TITLE ENABLE ANALYTICS"                = "Utilisation de l'app";
+"PREFERENCES TITLE ACKNOWLEDGEMENTS"                = "Remerciements";
 
 "PREFERENCES MESSAGE PREVIEW DEFAULT COLOR MODE"    = "Utiliser le mode de couleur et l'intensité par défaut lors d'un aperçu, si ces options sont disponibles et supportent un réglage automatique.. Ceci permet d'avoir des aperçus cohérents quelles que soient les options que vous définissez, mais peut augmenter le temps d'acquisition. Ceci peut créer des images noires en scannant après un aperçu sur certains pilotes SANE (ex: Pixma 1.0.24)";
 "PREFERENCES MESSAGE SHOW ADVANCED OPTIONS"         = "Certains périphériques ont des options avancées, utilisez ce réglage pour y accéder.";
