Fix accessibility labels in gallery

--- a/SaneScanner/en.lproj/Localizable.strings
+++ b/SaneScanner/en.lproj/Localizable.strings
@@ -96,6 +96,7 @@
 "GALLERY OVERVIEW SELECTED NONE"        = "No scan selected";
 "GALLERY OVERVIEW SELECTED SINGULAR %d" = "%d scan selected";
 "GALLERY OVERVIEW SELECTED PLURAL %d"   = "%d scans selected";
+"GALLERY ITEM"              = "Scan";
 
 // Dialogs
 "DIALOG ADD HOST TITLE"             = "Add a host";
