--- a/SaneScanner/fr.lproj/Localizable.strings
+++ b/SaneScanner/fr.lproj/Localizable.strings
@@ -96,6 +96,7 @@
 "GALLERY OVERVIEW SELECTED NONE"        = "Aucun document sélectionné";
 "GALLERY OVERVIEW SELECTED SINGULAR %d" = "%d document sélectionné";
 "GALLERY OVERVIEW SELECTED PLURAL %d"   = "%d documents sélectionnés";
+"GALLERY ITEM"              = "Document";
 
 // Dialogs
 "DIALOG ADD HOST TITLE"             = "Ajouter un hôte";
