Add preference menu option to clear all caches

--- a/SaneScanner/fr.lproj/Localizable.strings
+++ b/SaneScanner/fr.lproj/Localizable.strings
@@ -61,11 +61,13 @@
 "PREFERENCES SECTION SCAN"      = "Acquisition";
 "PREFERENCES SECTION PREVIEW"   = "Aperçu";
 "PREFERENCES SECTION ANALYTICS" = "Statistiques";
+"PREFERENCES SECTION MISC"      = "Divers";
 "PREFERENCES SECTION ABOUT APP" = "À propos";
 
 "PREFERENCES TITLE PREVIEW DEFAULT COLOR MODE"      = "Mode de couleurs par défaut";
 "PREFERENCES TITLE SHOW ADVANCED OPTIONS"           = "Afficher les options avancées";
 "PREFERENCES TITLE SAVE AS PNG"                     = "Enregistrer en PNG";
+"PREFERENCES TITLE CLEANUP CACHE"                   = "Vider le cache (minitatures, etc)";
 "PREFERENCES TITLE APP VERSION"                     = "Version de l'app";
 "PREFERENCES TITLE SANE VERSION"                    = "Version de Sane backends";
 "PREFERENCES TITLE CONTACT"                         = "Des questions ? Envoyez moi un email !";
