--- a/SaneScanner/en.lproj/Localizable.strings
+++ b/SaneScanner/en.lproj/Localizable.strings
@@ -61,11 +61,13 @@
 "PREFERENCES SECTION SCAN"      = "Scan";
 "PREFERENCES SECTION PREVIEW"   = "Preview";
 "PREFERENCES SECTION ANALYTICS" = "Analytics";
+"PREFERENCES SECTION MISC"      = "Miscellaneous";
 "PREFERENCES SECTION ABOUT APP" = "About this app";
 
 "PREFERENCES TITLE PREVIEW DEFAULT COLOR MODE"      = "Preview with default color mode";
 "PREFERENCES TITLE SHOW ADVANCED OPTIONS"           = "Show advanced options";
 "PREFERENCES TITLE SAVE AS PNG"                     = "Save as PNG";
+"PREFERENCES TITLE CLEANUP CACHE"                   = "Cleanup cached data (thumbnails, etc)";
 "PREFERENCES TITLE APP VERSION"                     = "App version";
 "PREFERENCES TITLE SANE VERSION"                    = "Sane backends version";
 "PREFERENCES TITLE CONTACT"                         = "Got some questions? Drop me an email!";
