Improve prefVC cache data handling

--- a/SaneScanner/fr.lproj/Localizable.strings
+++ b/SaneScanner/fr.lproj/Localizable.strings
@@ -67,7 +67,7 @@
 "PREFERENCES TITLE PREVIEW DEFAULT COLOR MODE"      = "Mode de couleurs par défaut";
 "PREFERENCES TITLE SHOW ADVANCED OPTIONS"           = "Afficher les options avancées";
 "PREFERENCES TITLE SAVE AS PNG"                     = "Enregistrer en PNG";
-"PREFERENCES TITLE CLEANUP CACHE"                   = "Vider le cache (minitatures, etc)";
+"PREFERENCES TITLE CLEANUP CACHE"                   = "Données en cache (minitatures, etc)";
 "PREFERENCES TITLE APP VERSION"                     = "Version de l'app";
 "PREFERENCES TITLE SANE VERSION"                    = "Version de Sane backends";
 "PREFERENCES TITLE CONTACT"                         = "Des questions ? Envoyez moi un email !";
@@ -78,6 +78,7 @@
 "PREFERENCES MESSAGE SHOW ADVANCED OPTIONS"         = "Certains périphériques ont des options avancées, utilisez ce réglage pour y accéder.";
 "PREFERENCES MESSAGE SAVE AS PNG"                   = "Par défaut les documents scannés sont sauvegardés en JPEG avec un facteur de qualité de 90%. Activez ce paramètre pour enregistrer en PNG sans perte de qualité.";
 "PREFERENCES MESSAGE ENABLE ANALYTICS"              = "Chaque événement est envoyé avec vottre version iOS, modèle d'appareil, et version de l'application. Les données spécifiques aux événements envoyés sont le nombre d'hôtes configurés, le modèle de votre scanner et les erreurs que vous pouvez rencontrer. ";
+"PREFERENCES MESSAGE CLEANUP CACHE"                 = "Appuyez pour vider le cache";
 
 "ANALYTICS ALERT TITLE"             = "Voulez-vous autoriser l'envoi de statistiques anonymes ?";
 
