--- a/SaneScanner/en.lproj/Localizable.strings
+++ b/SaneScanner/en.lproj/Localizable.strings
@@ -67,7 +67,7 @@
 "PREFERENCES TITLE PREVIEW DEFAULT COLOR MODE"      = "Preview with default color mode";
 "PREFERENCES TITLE SHOW ADVANCED OPTIONS"           = "Show advanced options";
 "PREFERENCES TITLE SAVE AS PNG"                     = "Save as PNG";
-"PREFERENCES TITLE CLEANUP CACHE"                   = "Cleanup cached data (thumbnails, etc)";
+"PREFERENCES TITLE CLEANUP CACHE"                   = "Cached data (thumbnails, etc)";
 "PREFERENCES TITLE APP VERSION"                     = "App version";
 "PREFERENCES TITLE SANE VERSION"                    = "Sane backends version";
 "PREFERENCES TITLE CONTACT"                         = "Got some questions? Drop me an email!";
@@ -78,6 +78,7 @@
 "PREFERENCES MESSAGE SHOW ADVANCED OPTIONS"         = "Some devices have advanced options, toggling this setting ON will allow you to access them.";
 "PREFERENCES MESSAGE SAVE AS PNG"                   = "By default scanned documents will be saved as JPEG images with a 90% quality factor. Toggle this setting to save as a lossless PNG file.";
 "PREFERENCES MESSAGE ENABLE ANALYTICS"              = "Each event will be sent along with your iOS version, device model and app version. Event-specific data are the number of hosts you have configured, the make of your scanner and possible errors you encountered.";
+"PREFERENCES MESSAGE CLEANUP CACHE"                 = "Tap to delete all cached data";
 
 "ANALYTICS ALERT TITLE"             = "Do you want to enable anonymous app analytics?";
 
