--- a/SaneScanner/en.lproj/Localizable.strings
+++ b/SaneScanner/en.lproj/Localizable.strings
@@ -66,7 +66,7 @@
 
 "PREFERENCES TITLE PREVIEW DEFAULT COLOR MODE"      = "Preview with default color mode";
 "PREFERENCES TITLE SHOW ADVANCED OPTIONS"           = "Show advanced options";
-"PREFERENCES TITLE SAVE AS PNG"                     = "Save as PNG";
+"PREFERENCES TITLE IMAGE FORMAT"                    = "Image format";
 "PREFERENCES TITLE CLEANUP CACHE"                   = "Cached data (thumbnails, etc)";
 "PREFERENCES TITLE APP VERSION"                     = "App version";
 "PREFERENCES TITLE SANE VERSION"                    = "Sane backends version";
@@ -76,7 +76,7 @@
 
 "PREFERENCES MESSAGE PREVIEW DEFAULT COLOR MODE"    = "Will use the default color mode and image intensity, if those options are found and support using an automatic value. Allows for more consistent render accross previews, whatever the option you set, but can reduce preview speed and reset other options depending on the device. This can result in black images when scanning after a preview on some SANE backends (e.g. Pixma 1.0.24).";
 "PREFERENCES MESSAGE SHOW ADVANCED OPTIONS"         = "Some devices have advanced options, toggling this setting ON will allow you to access them.";
-"PREFERENCES MESSAGE SAVE AS PNG"                   = "By default scanned documents will be saved as JPEG images with a 90% quality factor. Toggle this setting to save as a lossless PNG file.";
+"PREFERENCES MESSAGE IMAGE FORMAT"                  = "By default scanned documents will be saved as JPEG images with a 90% quality factor. Toggle this setting to save as a lossless PNG file or a 90% quality HEIC file";
 "PREFERENCES MESSAGE ENABLE ANALYTICS"              = "Each event will be sent along with your iOS version, device model and app version. Event-specific data are the number of hosts you have configured, the make of your scanner and possible errors you encountered.";
 "PREFERENCES MESSAGE CLEANUP CACHE"                 = "Tap to delete all cached data";
 
