--- a/SaneScanner/fr.lproj/Localizable.strings
+++ b/SaneScanner/fr.lproj/Localizable.strings
@@ -40,7 +40,6 @@
 "ERROR MESSAGE CANNOT OPEN IMAGES"          = "Impossible d'ouvrir les images";
 "ERROR MESSAGE CANNOT OPEN IMAGE %@"        = "Impossible d'ouvrir l'image %@";
 "ERROR MESSAGE INVALID IMAGE DATA %@"       = "Données images invalides dans le fichier %@";
-"ERROR MESSAGE INVALID JPEG QUALITY %.0lf"  = "Qualité JPEG sélectionnée invalide : %.0lf";
 
 // Devices list screen
 "DEVICES SECTION HOSTS"     = "Serveurs";
@@ -67,6 +66,7 @@
 "PREFERENCES TITLE PREVIEW DEFAULT COLOR MODE"      = "Mode de couleurs par défaut";
 "PREFERENCES TITLE SHOW ADVANCED OPTIONS"           = "Afficher les options avancées";
 "PREFERENCES TITLE IMAGE FORMAT"                    = "Format d'image";
+"PREFERENCES TITLE PDF SIZE"                        = "Dimensions PDF";
 "PREFERENCES TITLE CLEANUP CACHE"                   = "Données en cache (minitatures, etc)";
 "PREFERENCES TITLE APP VERSION"                     = "Version de l'app";
 "PREFERENCES TITLE SANE VERSION"                    = "Version de Sane backends";
@@ -77,8 +77,13 @@
 "PREFERENCES MESSAGE PREVIEW DEFAULT COLOR MODE"    = "Utiliser le mode de couleur et l'intensité par défaut lors d'un aperçu, si ces options sont disponibles et supportent un réglage automatique.. Ceci permet d'avoir des aperçus cohérents quelles que soient les options que vous définissez, mais peut augmenter le temps d'acquisition. Ceci peut créer des images noires en scannant après un aperçu sur certains pilotes SANE (ex: Pixma 1.0.24)";
 "PREFERENCES MESSAGE SHOW ADVANCED OPTIONS"         = "Certains périphériques ont des options avancées, utilisez ce réglage pour y accéder.";
 "PREFERENCES MESSAGE IMAGE FORMAT"                  = "Par défaut les documents scannés sont sauvegardés en JPEG avec un facteur de qualité de 90%. Changez ce paramètre pour enregistrer en PNG sans perte de qualité ou en HEIC avec une qualité à 90%";
+"PREFERENCES MESSAGE PDF SIZE"                      = "Lors de l'assemblage d'images en PDF, les pages peuvent être à la taille de chaque image scannée, au format A4 ou lettre US";
 "PREFERENCES MESSAGE ENABLE ANALYTICS"              = "Chaque événement est envoyé avec vottre version iOS, modèle d'appareil, et version de l'application. Les données spécifiques aux événements envoyés sont le nombre d'hôtes configurés, le modèle de votre scanner et les erreurs que vous pouvez rencontrer. ";
 "PREFERENCES MESSAGE CLEANUP CACHE"                 = "Appuyez pour vider le cache";
+
+"PREFERENCES VALUE PDF SIZE IMAGE SIZE" = "Taille de l'image";
+"PREFERENCES VALUE PDF SIZE A4"         = "A4";
+"PREFERENCES VALUE PDF SIZE US LETTER"  = "Lettre US";
 
 "ANALYTICS ALERT TITLE"             = "Voulez-vous autoriser l'envoi de statistiques anonymes ?";
 
