Update app to use new SYKit

--- a/SaneScanner/en.lproj/Localizable.strings
+++ b/SaneScanner/en.lproj/Localizable.strings
@@ -100,11 +100,11 @@
 
 // Gallery overview
 "GALLERY OVERVIEW TITLE"    = "All scans";
-"GALLERY IMAGE %d OF %d"    = "%d of %d";
-"GALLERY OVERVIEW SELECTED NONE"        = "No scan selected";
-"GALLERY OVERVIEW SELECTED SINGULAR %d" = "%d scan selected";
-"GALLERY OVERVIEW SELECTED PLURAL %d"   = "%d scans selected";
-"GALLERY ITEM"              = "Scan";
+"GALLERY ITEM"                          = "Scan";
+"GALLERY ITEM %d OF %d"                 = "%d of %d";
+"GALLERY SELECTED ITEMS COUNT %d.zero"  = "No scan selected";
+"GALLERY SELECTED ITEMS COUNT %d.one"   = "%d scan selected";
+"GALLERY SELECTED ITEMS COUNT %d.other" = "%d scans selected";
 
 // Dialogs
 "DIALOG ADD HOST TITLE"             = "Add a host";
