--- a/SaneScanner/fr.lproj/Localizable.strings
+++ b/SaneScanner/fr.lproj/Localizable.strings
@@ -100,11 +100,11 @@
 
 // Gallery overview
 "GALLERY OVERVIEW TITLE"    = "Documents";
-"GALLERY IMAGE %d OF %d"    = "%d sur %d";
-"GALLERY OVERVIEW SELECTED NONE"        = "Aucun document sélectionné";
-"GALLERY OVERVIEW SELECTED SINGULAR %d" = "%d document sélectionné";
-"GALLERY OVERVIEW SELECTED PLURAL %d"   = "%d documents sélectionnés";
-"GALLERY ITEM"              = "Document";
+"GALLERY ITEM"                          = "Document";
+"GALLERY ITEM %d OF %d"                 = "%d sur %d";
+"GALLERY SELECTED ITEMS COUNT %d.zero"  = "Aucun document sélectionné";
+"GALLERY SELECTED ITEMS COUNT %d.one"   = "%d document sélectionné";
+"GALLERY SELECTED ITEMS COUNT %d.other" = "%d documents sélectionnés";
 
 // Dialogs
 "DIALOG ADD HOST TITLE"             = "Ajouter un hôte";
