Improve GalleryGridVC to show images from oldest to newest, grouped by day (adding the scans that are close enough to the last ones of the day to be considered from the same day)

--- a/SaneScanner/en.lproj/Localizable.strings
+++ b/SaneScanner/en.lproj/Localizable.strings
@@ -105,6 +105,9 @@
 "GALLERY SELECTED ITEMS COUNT %d.zero"  = "No scan selected";
 "GALLERY SELECTED ITEMS COUNT %d.one"   = "%d scan selected";
 "GALLERY SELECTED ITEMS COUNT %d.other" = "%d scans selected";
+"GALLERY ITEMS COUNT %d.zero"           = "No scans";
+"GALLERY ITEMS COUNT %d.one"            = "1 scan";
+"GALLERY ITEMS COUNT %d.other"          = "%d scans";
 
 // Dialogs
 "DIALOG ADD HOST TITLE"             = "Add a host";
