--- a/SaneScanner/fr.lproj/Localizable.strings
+++ b/SaneScanner/fr.lproj/Localizable.strings
@@ -105,6 +105,9 @@
 "GALLERY SELECTED ITEMS COUNT %d.zero"  = "Aucun document sélectionné";
 "GALLERY SELECTED ITEMS COUNT %d.one"   = "%d document sélectionné";
 "GALLERY SELECTED ITEMS COUNT %d.other" = "%d documents sélectionnés";
+"GALLERY ITEMS COUNT %d.zero"           = "Aucun document";
+"GALLERY ITEMS COUNT %d.one"            = "1 document";
+"GALLERY ITEMS COUNT %d.other"          = "%d documents";
 
 // Dialogs
 "DIALOG ADD HOST TITLE"             = "Ajouter un hôte";
