Add confirmation dialogs to prevent closing DeviceVC while scanning

--- a/SaneScanner/en.lproj/Localizable.strings
+++ b/SaneScanner/en.lproj/Localizable.strings
@@ -24,6 +24,7 @@
 "ACTION ANALYTICS NO"       = "Don't ask again";
 "ACTION EDIT"               = "Edit";
 "ACTION SAVE"               = "Save";
+"ACTION STOP SCANNING"      = "Stop scanning";
 
 "LOADING"           = "Loading...";
 "SCANNING"          = "Scanning...";
@@ -145,3 +146,7 @@
 "MENU ADD HOST"     = "New host...";
 "MENU OPEN GALLERY" = "Open image gallery";
 "MENU ABORT"        = "Abort current operation";
+
+// Confirmations
+"CLOSE DEVICE CONFIRMATION TITLE" = "Are you sure you want to close this page?";
+"CLOSE DEVICE CONFIRMATION MESSAGE" = "The current scan will be canceled";
