--- a/SaneScanner/fr.lproj/Localizable.strings
+++ b/SaneScanner/fr.lproj/Localizable.strings
@@ -24,11 +24,12 @@
 "ACTION ANALYTICS NO"       = "Ne plus me demander";
 "ACTION EDIT"               = "Modifier";
 "ACTION SAVE"               = "Sauvegarder";
+"ACTION STOP SCANNING"      = "Arrêter l'acquisition";
 
 "LOADING"           = "Chargement...";
 "SCANNING"          = "Acquisition...";
 "SCANNING %f"       = "Acquisition... (%.f%%)";
-"SCANNING %f %d"    = "Scanning... (%.f%%, %d documents finis)";
+"SCANNING %f %d"    = "Acquisition... (%.f%%, %d documents finis)";
 "PREVIEWING"        = "Aperçu en cours...";
 "PREVIEWING %f"     = "Aperçu en cours... (%.f%%)";
 "CANCELLING"        = "Annulation...";
@@ -145,3 +146,7 @@
 "MENU ADD HOST"     = "Ajouter un hôte...";
 "MENU OPEN GALLERY" = "Ouvrir la gallerie d'images";
 "MENU ABORT"        = "Annuler l'opération en cours";
+
+// Confirmations
+"CLOSE DEVICE CONFIRMATION TITLE" = "Êtes-vous sûr(e) de vouloir fermer cette page ?";
+"CLOSE DEVICE CONFIRMATION MESSAGE" = "L'acquisition en cours sera annulée";
