Update GalleryItem cell actions

--- a/SaneScanner/en.lproj/Localizable.strings
+++ b/SaneScanner/en.lproj/Localizable.strings
@@ -25,6 +25,9 @@
 "ACTION EDIT"               = "Edit";
 "ACTION SAVE"               = "Save";
 "ACTION STOP SCANNING"      = "Stop scanning";
+"ACTION SAVE TO PHOTOS"     = "Save to Photos";
+"ACTION COPY"               = "Copy";
+"ACTION REFRESH"            = "Refresh";
 
 "LOADING"           = "Loading...";
 "SCANNING"          = "Scanning...";
@@ -123,11 +126,10 @@
 "DIALOG AUTH PLACEHOLDER HOST"      = "Username";
 "DIALOG AUTH PLACEHOLDER NAME"      = "Password";
 
-"DIALOG DELETE SCAN TITLE"          = "Confirmation";
-"DIALOG DELETE SCAN MESSAGE"        = "Are you sure you want to delete this scan?";
-
-"DIALOG DELETE SCANS TITLE"         = "Confirmation";
-"DIALOG DELETE SCANS MESSAGE %d"    = "Are you sure you want to delete %d scans?";
+"DIALOG DELETE SCANS TITLE"             = "Confirmation";
+"DIALOG DELETE SCANS MESSAGE %d.zero"   = "Are you sure you want to delete these scans?";
+"DIALOG DELETE SCANS MESSAGE %d.one"    = "Are you sure you want to delete this scan?";
+"DIALOG DELETE SCANS MESSAGE %d.other"  = "Are you sure you want to delete %d scans?";
 
 "DIALOG COULDNT OPEN DEVICE TITLE"  = "Couldn't open device";
 
