--- a/SaneScanner/fr.lproj/Localizable.strings
+++ b/SaneScanner/fr.lproj/Localizable.strings
@@ -25,6 +25,9 @@
 "ACTION EDIT"               = "Modifier";
 "ACTION SAVE"               = "Sauvegarder";
 "ACTION STOP SCANNING"      = "Arrêter l'acquisition";
+"ACTION SAVE TO PHOTOS"     = "Ajouter aux photos";
+"ACTION COPY"               = "Copier";
+"ACTION REFRESH"            = "Rafraichir";
 
 "LOADING"           = "Chargement...";
 "SCANNING"          = "Acquisition...";
@@ -123,11 +126,10 @@
 "DIALOG AUTH PLACEHOLDER USERNAME"  = "Utilisateur";
 "DIALOG AUTH PLACEHOLDER PASSWORD"  = "Mot de passe";
 
-"DIALOG DELETE SCAN TITLE"          = "Confirmation";
-"DIALOG DELETE SCAN MESSAGE"        = "Etes vous sûr de vouloir supprimer ce document ?";
-
-"DIALOG DELETE SCANS TITLE"         = "Confirmation";
-"DIALOG DELETE SCANS MESSAGE %d"    = "Etes vous sûr de vouloir supprimer %d documents ?";
+"DIALOG DELETE SCANS TITLE"             = "Confirmation";
+"DIALOG DELETE SCANS MESSAGE %d.zero"   = "Etes vous sûr de vouloir supprimer ces documents ?";
+"DIALOG DELETE SCANS MESSAGE %d.one"    = "Etes vous sûr de vouloir supprimer ce document ?";
+"DIALOG DELETE SCANS MESSAGE %d.other"  = "Etes vous sûr de vouloir supprimer %d documents ?";
 
 "DIALOG COULDNT OPEN DEVICE TITLE"  = "Accès au périphérique échoué";
 
