Add local notification after scanning when the app is in the background

--- a/SaneScanner/Resources/en.lproj/Localizable.strings
+++ b/SaneScanner/Resources/en.lproj/Localizable.strings
@@ -152,3 +152,9 @@
 // Confirmations
 "CLOSE DEVICE CONFIRMATION TITLE" = "Are you sure you want to close this page?";
 "CLOSE DEVICE CONFIRMATION MESSAGE" = "The current scan will be canceled";
+
+// Notifications
+"SCAN FINISHED NOTIFICATION TITLE"              = "Done scanning!";
+"SCAN FINISHED NOTIFICATION MESSAGE %d.zero"    = "0 documents saved";
+"SCAN FINISHED NOTIFICATION MESSAGE %d.one"     = "1 document saved";
+"SCAN FINISHED NOTIFICATION MESSAGE %d.other"   = "%d documents saved";
