--- a/SaneScanner/Resources/fr.lproj/Localizable.strings
+++ b/SaneScanner/Resources/fr.lproj/Localizable.strings
@@ -152,3 +152,9 @@
 // Confirmations
 "CLOSE DEVICE CONFIRMATION TITLE" = "Êtes-vous sûr(e) de vouloir fermer cette page ?";
 "CLOSE DEVICE CONFIRMATION MESSAGE" = "L'acquisition en cours sera annulée";
+
+// Notifications
+"SCAN FINISHED NOTIFICATION TITLE"              = "Acquisition finie !";
+"SCAN FINISHED NOTIFICATION MESSAGE %d.zero"    = "Aucun document sauvegardé";
+"SCAN FINISHED NOTIFICATION MESSAGE %d.one"     = "1 document sauvegardé";
+"SCAN FINISHED NOTIFICATION MESSAGE %d.other"   = "%d documents sauvegardés";
