Add ability to interleave pages when exporting a PDF (use case: scanned a bunch of recto sides, then verso sides)

--- a/Backlit/Resources/en.lproj/Localizable.strings
+++ b/Backlit/Resources/en.lproj/Localizable.strings
@@ -138,7 +138,8 @@
 "OPTION VALUE AUTO" = "Auto";
 
 // Custom activities
-"SHARE AS PDF"  = "Share as PDF";
+"SHARE AS PDF"              = "Share as PDF";
+"SHARE AS PDF INTERLEAVED"  = "Share as PDF (interleave front and back sides)";
 
 // Menu
 "MENU PREFERENCES"  = "Preferences...";
