--- a/Backlit/Resources/fr.lproj/Localizable.strings
+++ b/Backlit/Resources/fr.lproj/Localizable.strings
@@ -138,7 +138,8 @@
 "OPTION VALUE AUTO" = "Auto";
 
 // Custom activities
-"SHARE AS PDF"  = "Partager comme PDF";
+"SHARE AS PDF"              = "Partager comme PDF";
+"SHARE AS PDF INTERLEAVED"  = "Partager comme PDF (entrelacer rectos et versos)";
 
 // Menu
 "MENU PREFERENCES"  = "Préférences...";
