--- a/Backlit/Resources/fr.lproj/Localizable.strings
+++ b/Backlit/Resources/fr.lproj/Localizable.strings
@@ -47,7 +47,7 @@
 
 // Devices list screen
 "DEVICES SECTION HOSTS"     = "Serveurs";
-"DEVICES SECTION DEVICES"   = "Périphériques";
+"DEVICES SECTION DEVICES"   = "Appareils";
 "DEVICES ROW ADD HOST"      = "Ajouter...";
 
 // Device screen
@@ -79,7 +79,7 @@
 "PREFERENCES TITLE ACKNOWLEDGEMENTS"                = "Remerciements";
 
 "PREFERENCES MESSAGE PREVIEW DEFAULT COLOR MODE"    = "Utiliser le mode de couleur et l'intensité par défaut lors d'un aperçu, si ces options sont disponibles et supportent un réglage automatique.. Ceci permet d'avoir des aperçus cohérents quelles que soient les options que vous définissez, mais peut augmenter le temps d'acquisition. Ceci peut créer des images noires en scannant après un aperçu sur certains pilotes SANE (ex: Pixma 1.0.24)";
-"PREFERENCES MESSAGE SHOW ADVANCED OPTIONS"         = "Certains périphériques ont des options avancées, utilisez ce réglage pour y accéder.";
+"PREFERENCES MESSAGE SHOW ADVANCED OPTIONS"         = "Certains appareils ont des options avancées, utilisez ce réglage pour y accéder.";
 "PREFERENCES MESSAGE IMAGE FORMAT"                  = "Par défaut les documents scannés sont sauvegardés en JPEG avec un facteur de qualité de 90%. Changez ce paramètre pour enregistrer en PNG sans perte de qualité ou en HEIC avec une qualité à 90%";
 "PREFERENCES MESSAGE PDF SIZE"                      = "Lors de l'assemblage d'images en PDF, les pages peuvent être à la taille de chaque image scannée, au format A4 ou lettre US";
 "PREFERENCES MESSAGE ENABLE ANALYTICS"              = "Chaque événement est envoyé avec vottre version iOS, modèle d'appareil, et version de l'application. Les données spécifiques aux événements envoyés sont le nombre d'hôtes configurés, le modèle de votre scanner et les erreurs que vous pouvez rencontrer. ";
@@ -100,7 +100,7 @@
 
 // Gallery
 "GALLERY EMPTY TITLE"       = "Pas de documents";
-"GALLERY EMPTY SUBTITLE"    = "Scannez un document en utilisant un des périphériques sur la gauche et il apparaitra ici";
+"GALLERY EMPTY SUBTITLE"    = "Scannez un document en utilisant un des appareils sur la gauche et il apparaitra ici";
 
 // Gallery overview
 "GALLERY OVERVIEW TITLE"    = "Documents";
@@ -131,7 +131,7 @@
 "DIALOG DELETE SCANS MESSAGE %d.one"    = "Etes vous sûr de vouloir supprimer ce document ?";
 "DIALOG DELETE SCANS MESSAGE %d.other"  = "Etes vous sûr de vouloir supprimer %d documents ?";
 
-"DIALOG COULDNT OPEN DEVICE TITLE"  = "Accès au périphérique échoué";
+"DIALOG COULDNT OPEN DEVICE TITLE"  = "Accès à l'appareil échoué";
 
 "OPTION BOOL ON"    = "Activé";
 "OPTION BOOL OFF"   = "Désactivé";
